new post : project(1) / <h> 태그 오타 수정

--- a/_posts/2020-09-25-project.md
+++ b/_posts/2020-09-25-project.md
@@ -31,7 +31,7 @@ categories: MyProjects
 그리고 고객 요구사항을 도출하기 위해서 사이버 캠퍼스의 사용자인 학생과 교수님들을 대상으로
 설문조사를 진행했다. 감사하게도 생각보다 많은 학생들이 성심성의껏 응답해줬고, 교수님들도 몇 분 빼고는 응답해주셨다. 아마 다들 사이버캠퍼스 때문에 화가 많이 난 상태였던 것 같다 (...)
 
-<h2>설문조사 결과 : 사용자의 목적과 불편함<h2>
+<h2>설문조사 결과 : 사용자의 목적과 불편함</h2>
 
 설문조사에서는 총 세가지를 물었다.
 
